[project]
name = "PyHiveLMS"
version = "1.1.1"
description = "Python bindings for Hive"
authors = [
    { name = "Michael K. Steinberg", email = "m.kuper.steinberg@gmail.com" },
]
requires-python = ">=3.11.0"
dependencies = [
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0",
    "attrs>=25.4.0",
    "typer==0.20.0",
]
readme = { file = "README.md", content-type = "text/markdown" }

[project.scripts]
pyhive = "pyhive.cli.main:main"

[tool.setuptools.package-data]
pyhive = ["pyproject.toml"]

[tool.setuptools]
py-modules = ["pyhive"]


[dependency-groups]
dev = ["pre-commit>=4.2.0", "pytest-cov>=6.2.1", "pytest>=7.4.0"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyhive"]

[tool.hatch.build.hooks.custom]
path = "scripts/generate_versions.py"

[tool.mypy]
plugins = []
mypy_path = "$MYPY_CONFIG_FILE_DIR,$MYPY_CONFIG_FILE_DIR/stubs"


[tool.api_versions]
supported = ["5.1.2", "6.2.0"]

# Ensure full coverage
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true

# Restrict dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true

# Know exactly what you're doing
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true

# Explicit is better than implicit
no_implicit_optional = true

# Prevent modules from being skipped
ignore_missing_imports = false
disallow_any_unimported = true

# Don't check tests
exclude = "([a-zA-Z]*/(tests)/(.)*)|.venv"
